# devopy

./: .gitignore  README.md  bugfixing.todo.txt  cascade-diagnostics.txt  docker-compose.yml  features.todo.txt  improvement.todo.txt  install.sh  project_status.md  pyproject.toml  requirements.todo.txt  requirements.txt  run.sh  setup.py
devopy/: __init__.py  api.py  api_extensions.py  auto_heal.py
docker/: analyze_data.yml  fetch_data.yml  filter_data.yml  save_data.yml  transform_data.yml
docs/: README.md  dependency_manager.md  docker_sandbox.md  editor_sandbox.md  editor_sandbox_quickstart.md  resource_monitor.md  text2python.md  zastosowania.md
examples/: api_example.py  auto_install_examples.py  cli_example.py  devopy_examples.py  devopy_launcher.py  docker_editor_example.py  docker_examples.py  docker_sandbox.py  flask_integration_example.py  graphql_integration_example.py  grpc_integration_example.py  html_visualization.py  interactive_visualization.py  launch_editor.py  matrix_editor.py  modules_demo.py  requirements_visualization.txt  run_example.py  simple_visualization_example.py  smart_editor.py  smart_editor_layouts.py  standalone_visualization.py  text2python_decorator_docker_compose_example.py  text2python_decorator_docker_example.py  text2python_decorator_example.py  text2python_decorator_examples_more.py  text2python_decorator_multiapi_example.py  text2python_decorator_restapi_example.py  visualization_example.py
sandbox/: env.local
scripts/: run_docker_sandbox.sh  run_integration_tests.sh  run_monitor.sh  run_text2python.sh
tools/: README.md
(+514 files in other folders)
